# rust-sdl

./: Cargo.toml  README.md
sdl/: Cargo.toml
sdl-sys/: Cargo.toml  build.rs  wrapper_gfx_framerate.h  wrapper_gfx_imagefilter.h  wrapper_gfx_primitives.h  wrapper_gfx_rotozoom.h  wrapper_image.h  wrapper_mixer.h
sdl-sys/src/: lib.rs
sdl/examples/: basic.rs
sdl/src/: audio.rs  cdrom.rs  event.rs  joystick.rs  lib.rs  sdl.rs  timer.rs  video.rs
sdl/src/gfx/: framerate.rs  imagefilter.rs  mod.rs  primitives.rs  rotozoom.rs
